<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_installgestures"
        android:title="@string/menu_installgestures"
        android:orderInCategory="100"
        android:titleCondensed="@string/menu_installgestures"/>
    <item android:id="@+id/menu_loadgestures"
        android:title="@string/menu_loadgestures"
        android:orderInCategory="200"
        android:titleCondensed="@string/menu_loadgestures"/>
    <item android:id="@+id/menu_resetgestures"
        android:title="@string/menu_resetgestures"
        android:orderInCategory="300"
        android:titleCondensed="@string/menu_resetgestures"/>
    <item android:id="@+id/menu_resetactions"
        android:title="@string/menu_resetactions"
        android:orderInCategory="400"
        android:titleCondensed="@string/menu_resetactions"/>
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="500"
        android:titleCondensed="@string/menu_settings"/>
    <item android:id="@+id/menu_launchactivities"
        android:title="@string/menu_launchactivities"
        android:orderInCategory="600"
        android:titleCondensed="@string/menu_launchactivities"/>
    <item android:id="@+id/menu_actions"
        android:title="@string/menu_actions"
        android:orderInCategory="700"
        android:titleCondensed="@string/menu_actions"/>
    <item android:id="@+id/menu_testaction"
        android:title="@string/menu_testaction"
        android:orderInCategory="800"
        android:titleCondensed="@string/menu_testaction"/>
</menu>
